--- a/Project1/rock-paper-scissors.html
+++ b/Project1/rock-paper-scissors.html
@@ -22,6 +22,9 @@
       
       <div class="container">
         <p class="js-result result"></p>
+      </div>
+
+      <div class="container">
         <p class="js-moves"></p>
       </div>
         
