--- a/project2/index.html
+++ b/project2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calculator-Final(Separated-HTML-CSS-JS)</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="10j-calculator-final2.css">
   </head>
   <body>
