--- a/project2/index.html
+++ b/project2/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Calculator</title>
     <link rel="stylesheet" href="10j-calculator-final2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <!-- Create an element to display the calculation. -->
